k8s/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80



# # Add ingress nginx
# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx  

# # Install ingress nginx
# helm install ingress-nginx ingress-nginx/ingress-nginx
